// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFilterInputAriaAttributes() should return correct aria attributes for isOpen: false, isRequired: false, labelId: 'label-id', descriptionId: 'description-id', dropdownId: 'dropdown-id' and activeDescendantId: 0 1`] = `
{
  "aria-autocomplete": "list",
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getFilterInputAriaAttributes() should return correct aria attributes for isOpen: false, isRequired: false, labelId: 'label-id', descriptionId: 'description-id', dropdownId: 'dropdown-id' and activeDescendantId: 1 1`] = `
{
  "aria-autocomplete": "list",
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getFilterInputAriaAttributes() should return correct aria attributes for isOpen: true, isRequired: true, labelId: 'label-id', descriptionId: 'description-id', dropdownId: 'dropdown-id' and activeDescendantId: 0 1`] = `
{
  "aria-activedescendant": "option-0",
  "aria-autocomplete": "list",
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "true",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
  "aria-required": "true",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', isRequired: false, hasFilter: false and isOpen: false 1`] = `
{
  "aria-hidden": "true",
  "aria-label": "Some label",
  "role": "listbox",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', isRequired: false, hasFilter: true and isOpen: false 1`] = `
{
  "aria-hidden": "true",
  "aria-label": "Some label",
  "role": "listbox",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', isRequired: true, hasFilter: false and isOpen: false 1`] = `
{
  "aria-hidden": "true",
  "aria-label": "Some label",
  "aria-required": "true",
  "role": "listbox",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', isRequired: true, hasFilter: true and isOpen: true 1`] = `
{
  "aria-label": "Some label",
  "role": "listbox",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for isSelected: true, isDisabled: false, isHidden: false and hasValue: false 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": "Empty value",
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for isSelected: true, isDisabled: false, isHidden: true and hasValue: false 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": "true",
  "aria-label": "Empty value",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for isSelected: true, isDisabled: true, isHidden: false and hasValue: false 1`] = `
{
  "aria-disabled": "true",
  "aria-hidden": null,
  "aria-label": "Empty value",
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for isSelected: true, isDisabled: true, isHidden: true and hasValue: true 1`] = `
{
  "aria-disabled": "true",
  "aria-hidden": "true",
  "aria-label": null,
}
`;

exports[`getSelectDropdownButtonAriaAttributes() should return correct aria attributes for isOpen: false, labelId: 'label-id', descriptionId: 'description-id', dropdownId: 'dropdown-id' and activeDescendantId: 1 1`] = `
{
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getSelectDropdownButtonAriaAttributes() should return correct aria attributes for isOpen: true, labelId: 'label-id', descriptionId: 'description-id', dropdownId: 'dropdown-id' and activeDescendantId: 0 1`] = `
{
  "aria-activedescendant": "option-0",
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "true",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;
